# AFMA

./: AFMA.pro  CMakeLists.txt  afma_2d_imagedisplay.cpp  afma_2d_imagedisplay.h  afma_2d_mainwindow.cpp  afma_2d_mainwindow.cpp.autosave  afma_2d_mainwindow.h  afma_2d_mainwindow.ui  afma_3d_mainwindow.cpp  afma_3d_mainwindow.h  afma_3d_mainwindow.ui  afma_mainwindow.cpp  afma_mainwindow.h  afma_mainwindow.ui  animationdialog.cpp  animationdialog.h  annotationfragmentshader.frag  annotationvertexshader.vert  facecomponent.cpp  facecomponent.h  facecomponent2d.cpp  facecomponent2d.h  facemodel2d.cpp  facemodel2d.h  facemodelcandide.cpp  facemodelcandide.h  fragmentshader.frag  grid2d.cpp  grid2d.h  main.cpp  modelfragmentshader.frag  modelvertexshader.vert  openglannotationwindow.cpp  openglannotationwindow.h  openglwindow.cpp  openglwindow.h  utility2d.cpp  utility2d.h  vertexshader.vert
images/: Datensaetze.lnk  Result of passbild 2-2.tif  images edges.tif  images grey 2.tif  images grey cut.tif  images grey.tif  images-1.tif  images-binary.tif  passbild 2 grey-1.tif  passbild 2 grey.tif  passbild 2-2.tif
