cmake_minimum_required (VERSION 2.6)
project (AFMA)


add_executable(AFMA afma_2d_mainwindow.h 
afma_2d_mainwindow.cpp
afma_2d_mainwindow.ui
animationdialog.h
animationdialog.cpp
annotationfragmentshader.frag
annotationvertexshader.vert
facecomponent.h
facecomponent.cpp
facemodelcandide.h
facemodelcandide.cpp
main.cpp
modelfragmentshader.frag
modelvertexshader.vert
openglannotationwindow.cpp
openglannotationwindow.h
openglwindow.cpp
openglwindow.h
)

)